--- a/oldcontrib/media/image/templates/servee/wysiwyg/insert/image/_detail.html
+++ b/oldcontrib/media/image/templates/servee/wysiwyg/insert/image/_detail.html
@@ -2,7 +2,7 @@
 {% load thumbnail %}
 	<div id="srv_insert_image_display">
 	   {% thumbnail object.image 175x225 as thumb %}
-	   <img src="{{ thumb.url }}" width="{{ thumb.width }}" height="{{ thumb.height }}" />
+	   <img src="{{ thumb }}" width="{{ thumb.width }}" height="{{ thumb.height }}" />
 	</div>
 	<h5 id="srv_insert_image_title">{{ object.title }}</h5>
 	<p id="srv_insert_image_description"></p>
