--- a/oldcontrib/media/document/templates/servee/wysiwyg/insert/document/_list.html
+++ b/oldcontrib/media/document/templates/servee/wysiwyg/insert/document/_list.html
@@ -21,7 +21,7 @@ $(document).ready(function(){
         buttonImage: "{{ STATIC_URL }}servee/images/buttonBG.png",
         width: 90,
         height: 24,
-        fileObjName: "document",
+        fileObjName: $("form#srv_upload_document [type=file]").attr('name'),
         checkExisting: false,
         multi: true,
         postData: {
